--- a/trello/src/components/Header/Header.module.scss
+++ b/trello/src/components/Header/Header.module.scss
@@ -12,5 +12,12 @@
   @include content;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.block {
+  display: flex;
+  justify-content: flex-start;
   height: 100%;
 }
