--- a/trello/src/components/App/App.module.scss
+++ b/trello/src/components/App/App.module.scss
@@ -2,7 +2,6 @@
 @import '../../styles/mixins';
 
 .content {
-  @include content;
   width: 100%;
-  min-height: 'calc(100vh - #{$header-height})';
+  min-height: 100vh;
 }
