--- a/trello/src/components/Board/Board.module.scss
+++ b/trello/src/components/Board/Board.module.scss
@@ -4,15 +4,21 @@
 .container {
   overflow-x: scroll;
   min-height: calc(100vh - #{$header-height});
+  display: flex;
+  min-width: 100%;
+  align-items: flex-start;
 }
 
 .list {
+  min-width: 250px;
+  margin: 10px;
+  min-height: 150px;
   display: flex;
-  min-width: 100%;
-  > * {
-    min-width: 150px;
-    margin: 10px;
-    background-color: rgba(0, 0, 0, 0.2);
-    min-height: 150px;
-  }
+}
+
+.centeredContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
