--- a/trello/src/components/Dashboard/Board.module.scss
+++ b/trello/src/components/Dashboard/Board.module.scss
@@ -1,3 +1,13 @@
+@import '../../styles/_variables';
+@import '../../styles/mixins';
+
 .container {
   background: #efefef;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 150px;
+  background-color: $main-color;
+  border-radius: 5px;
 }
