--- a/trello/src/styles/_mixins.scss
+++ b/trello/src/styles/_mixins.scss
@@ -6,3 +6,10 @@
   width: 100%;
   padding: 0 $spacing;
 }
+
+@mixin loaderAbsolute {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
