--- a/next-app-redux/components/Grid/Grid.scss
+++ b/next-app-redux/components/Grid/Grid.scss
@@ -7,6 +7,6 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 0 15px;
-  grid-auto-rows: 11px;
+  grid-gap: 0;
+  grid-auto-rows: 5px;
 }
